# More ramblings about the Steam Deck v2

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "2022/July/More ramblings about the Steam Deck.md",
-            "mode": "preview",
+            "mode": "source",
             "source": false
           }
         }
