--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "2022/July/More ramblings about the Steam Deck.md",
+            "file": "2022/July/Ramblings about playing on the Steam Deck.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "2022/July/More ramblings about the Steam Deck.md",
+                "file": "2022/July/Ramblings about playing on the Steam Deck.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,8 +89,9 @@
   },
   "active": "aa9b0d07af187e4f",
   "lastOpenFiles": [
-    "2022/July/More ramblings about the Steam Deck.md",
     "2022/July/Ramblings about the Steam Deck.md",
+    "2022/July/Ramblings about playing on the Steam Deck.md",
+    "2022/July/More ramblings about the Steam Deck.md",
     "README.md"
   ]
 }
